--- a/GolfFinderMVC/Views/Score/Index.cshtml
+++ b/GolfFinderMVC/Views/Score/Index.cshtml
@@ -12,6 +12,114 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Hole1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole13)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole13)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole14)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole14)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole15)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole15)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole16)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole16)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole17)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole17)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Hole18)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ParHole18)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.ParScore)
         </th>
         <th></th>
@@ -19,6 +127,114 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole1)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole1)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole2)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole2)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole3)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole3)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole4)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole4)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole5)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole5)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole6)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole6)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole7)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole7)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole8)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole8)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole9)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole9)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole10)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole10)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole11)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole11)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole12)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole12)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole13)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole13)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole14)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole14)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole15)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole15)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole16)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole16)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole17)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole17)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Hole18)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ParHole18)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.ParScore)
         </td>
