--- a/GolfFinderMVC/Views/Score/Edit.cshtml
+++ b/GolfFinderMVC/Views/Score/Edit.cshtml
@@ -1,25 +1,25 @@
-﻿@model GolfFinder_Models.Score_Models.ScoreAdd
+﻿@model GolfFinder_Models.Score_Models.ScoreEdit
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ScoreAdd</h4>
+        <h4>ScoreEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*<div class="form-group">
-            @Html.LabelFor(model => model.ScoreSheetID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ScoreID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ScoreSheetID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ScoreSheetID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ScoreID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ScoreID, "", new { @class = "text-danger" })
             </div>
         </div>*@
 
@@ -313,7 +313,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
