--- a/GolfFinderMVC/Views/Shared/_Layout.cshtml
+++ b/GolfFinderMVC/Views/Shared/_Layout.cshtml
@@ -17,11 +17,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Golf Finder", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Courses", "Index", "Course")</li>
                     <li>@Html.ActionLink("Scores", "Index", "Score")</li>
                     <li>@Html.ActionLink("Ratings", "index", "Rating")</li>
