Finished foreign keys and added DATETIMEUTC

--- a/GolfFinderMVC/Views/Rating/Details.cshtml
+++ b/GolfFinderMVC/Views/Rating/Details.cshtml
@@ -19,6 +19,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CourseName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CourseName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Cleanliness)
         </dt>
 
