--- a/GolfFinderMVC/Views/Score/Details.cshtml
+++ b/GolfFinderMVC/Views/Score/Details.cshtml
@@ -19,6 +19,21 @@
         </dd>*@
 
         <dt>
+            @Html.DisplayNameFor(model => model.CourseName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CourseName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CreatedUtc)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CreatedUtc)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Hole1)
         </dt>
 
